portfolio/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


body {
  background-color: #ffffff;
  color: #333333;
 }
  
.dark {
  background-color: #1C1917;
  color: #ffffff;
 }
  
.dark h1,
.dark p,
.dark .text-white {
  color: #ffffff;
}

#skillsText {
  color: #1f1f1f;
}

.slick-dots li button:before {
  color: rgb(120, 120, 120) !important;
  font-size: 10px !important;
  margin-top: 10px;
}

.slick-dots li.slick-active button:before {
  color: #14B8A6  !important;
}

.slick-prev:before, .slick-next:before {
  color: #14B8A6  !important;
}

